wallet operation fixed