@@ -4,22 +4,42 @@ import java.util.UUID;
 
 import javax.annotation.PostConstruct;
 
+import com.google.gson.Gson;
 import com.ndb.auction.models.DirectSale;
+import com.ndb.auction.models.coinbase.CoinbaseBody;
+import com.ndb.auction.models.coinbase.CoinbasePostBody;
+import com.ndb.auction.models.coinbase.CoinbaseRes;
 import com.ndb.auction.payload.CryptoPayload;
 import com.ndb.auction.payload.PayResponse;
 import com.stripe.Stripe;
+import com.stripe.exception.StripeException;
 import com.stripe.model.PaymentIntent;
 import com.stripe.param.PaymentIntentCreateParams;
 
+import org.apache.http.HttpHeaders;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.http.MediaType;
+import org.springframework.stereotype.Service;
+import org.springframework.web.reactive.function.client.WebClient;
 
+import reactor.core.publisher.Mono;
+
+@Service
 public class DirectSaleService extends BaseService {
     
+    private WebClient coinbaseAPI;
+
 	@Value("${stripe.secret.key}")
 	private String stripeSecretKey;
 	
 	@Value("${stripe.public.key}")
 	private String stripePublicKey;
+
+    public DirectSaleService(WebClient.Builder webClientBuilder) {
+        this.coinbaseAPI = webClientBuilder
+            .baseUrl("https://api.commerce.coinbase.com")
+            .build();
+    }
 
     @PostConstruct
     public void init() {
@@ -27,37 +47,87 @@ public class DirectSaleService extends BaseService {
     }
 
     // create empty direct sale
-    public DirectSale createNewDirectSale(String userId, double ndbPrice, double ndbAmount) {
+    public DirectSale createNewDirectSale(String userId, double ndbPrice, double ndbAmount, int whereTo) {
         String txnId = UUID.randomUUID().toString();
-        DirectSale directSale = new DirectSale(userId, txnId, ndbPrice, ndbAmount);
+        DirectSale directSale = new DirectSale(userId, txnId, ndbPrice, ndbAmount, whereTo);
         return directSaleDao.createEmptyDirectSale(directSale);
     }
 
     // stripe pay for Direct Sale
-    // public PayResponse stripePayment(String userId, String txnId, Long amount, String paymentItentId, String paymentMethodId) {
-    //     PaymentIntent intent;
-    //     PayResponse response = new PayResponse();
-    //     PaymentIntentCreateParams params =
-    //     PaymentIntentCreateParams.builder()
-    //       .setAmount(new Long(calculateOrderAmount(postBody.getItems())))
-    //       .setCurrency("eur")
-    //       .setAutomaticPaymentMethods(
-    //         PaymentIntentCreateParams.AutomaticPaymentMethods
-    //           .builder()
-    //           .setEnabled(true)
-    //           .build()
-    //       )
-    //       .build();
+    public PayResponse stripePayment(String userId, String txnId) throws StripeException {
+        // get Direct Sale object
+        DirectSale directSale = directSaleDao.getDirectSale(userId, txnId);
+        double amount = directSale.getNdbPrice() * directSale.getNdbAmount();
+        Long lAmount = Double.valueOf(amount * 100).longValue();
+        PayResponse response = new PayResponse();
+        PaymentIntentCreateParams params =
+        PaymentIntentCreateParams.builder()
+          .setAmount(lAmount)
+          .setCurrency("usd")
+          .setAutomaticPaymentMethods(
+            PaymentIntentCreateParams.AutomaticPaymentMethods
+              .builder()
+              .setEnabled(true)
+              .build()
+          )
+          .build();
 
-    //     // Create a PaymentIntent with the order amount and currency
-    //     PaymentIntent paymentIntent = PaymentIntent.create(params);
-    //     response.setClientSecret(paymentIntent.getClientSecret());
-    //     CreatePaymentResponse paymentResponse = new CreatePaymentResponse(paymentIntent.getClientSecret());
+        // Create a PaymentIntent with the order amount and currency
+        PaymentIntent paymentIntent = PaymentIntent.create(params);
+        directSale.setPaymentIntentId(paymentIntent.getId());
+        directSaleDao.updateDirectSale(directSale);
 
-    // }
+        response.setClientSecret(paymentIntent.getClientSecret());
+        return response;
+    }
 
-    // public CryptoPayload cryptoPayment(String userId, String txnId, double amount) {
+    public CryptoPayload cryptoPayment(String userId, String txnId) {
+        
+        DirectSale directSale = directSaleDao.getDirectSale(userId, txnId);
+        if(directSale == null) {
+            return null;
+        }
 
-    // }
+        double amount = directSale.getNdbAmount() * directSale.getNdbPrice();
+        /// Amount means the total USD price for NDB Token
+        CoinbasePostBody data = new CoinbasePostBody(
+            "Direct Sale",
+            "Direct Sale for " + userId,
+            "fixed_price",
+            amount
+        );
+
+        // API call for create new charge
+        String response = coinbaseAPI.post()
+            .uri(uriBuilder -> uriBuilder.path("/charges").build())
+            .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+            .header("X-CC-Api-Key", coinbaseApiKey)
+            .header("X-CC-Version", "2018-03-22")
+            .body(Mono.just(data), CoinbasePostBody.class)
+            .retrieve()
+            .bodyToMono(String.class).block();
+        
+        CoinbaseRes res = new Gson().fromJson(response, CoinbaseRes.class);
+        
+        CoinbaseBody resBody = res.getData();
+        
+        String code = resBody.getCode();
+        
+        directSale.setCode(code);
+        directSaleDao.updateDirectSale(directSale);
+        return new CryptoPayload(resBody.getAddresses(), resBody.getPricing());
+    }
+
+    public DirectSale getDirectSaleByPayment(String paymentId) {
+        return directSaleDao.getDirectSaleByIntent(paymentId);
+    }
+
+    public DirectSale getDirectSaleByCode(String code) {
+        return directSaleDao.getDirectSaleByCode(code);
+    }
+
+    public DirectSale updateDirectSale(DirectSale directSale) {
+        return directSaleDao.updateDirectSale(directSale);
+    }
 
 }
